PROJECT(data_02_hash_table)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
# set(CMAKE_AUTOMOC ON)

# SET(APP_SRCS hash_table.cpp )
SET(DATA_2_SRCS hash_table.cpp)
ADD_LIBRARY(data_02_hash_table SHARED ${DATA_2_SRCS})
SET_TARGET_PROPERTIES(data_02_hash_table PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# TARGET_LINK_LIBRARIES(data_02_hash_table)


