PROJECT(data_03_string)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

# set(CMAKE_INCLUDE_CURRENT_DIR ON)
# set(CMAKE_AUTOMOC ON)

# #SET(APP_SRCS calibration.cpp core_function.cpp ctrlTool.cpp keyBoard.cpp point.cpp)
# SET(DATA_1_SRCS array.cpp)
# ADD_LIBRARY(data_01_array SHARED ${DATA_1_SRCS})
# SET_TARGET_PROPERTIES(data_01_array PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# TARGET_LINK_LIBRARIES(data_01_array)


